adding new page : presentation

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./assets/img/favicon-am-removebg.png"
+    />
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <script
       src="https://kit.fontawesome.com/4fa5450d7b.js"
@@ -13,11 +18,10 @@
   <body>
     <header class="header">
       <a href="./index.html" class="logo"
-        ><img src="./assets/img/logo_alek_portfolio_removebg.png" alt="logo"
+        ><img src="./assets/img/logo-alek-portfoliO-big-rbg.png" alt="logo"
       /></a>
-
       <nav class="navbarLink">
-        <a href="#">Qui suis-je ?</a>
+        <a href="./presentation.html">Qui suis-je ?</a>
         <a href="#">Mes projets</a>
       </nav>
     </header>
@@ -33,11 +37,13 @@
         <h1>🤝 Bonjour, je suis Alek Mikolajek</h1>
         <h2>💻 Développeur web junior</h2>
         <h2>📍 France, Région parisienne</h2>
-        <a href="#"><button class="button-style">Qui suis-je ?</button></a>
+        <a href="./presentation.html"
+          ><button class="button-style">Qui suis-je ?</button></a
+        >
       </div>
     </section>
     <footer class="footer">
-      <p>© Mention légales - Alek Mikolajek</p>
+      <p>© Mentions légales - Alek Mikolajek</p>
       <div class="social-link">
         <a href="https://www.linkedin.com/in/alekmikolajek/" target="_blank"
           ><i class="fa-brands fa-linkedin fa-2xl"></i
