adding new page mes projets

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       /></a>
       <nav class="navbarLink">
         <a href="./presentation.html">Qui suis-je ?</a>
-        <a href="#">Mes projets</a>
+        <a href="./projet.html">Mes projets</a>
       </nav>
     </header>
     <section class="welcome">
@@ -43,7 +43,9 @@
       </div>
     </section>
     <footer class="footer">
-      <p>© Mentions légales - Alek Mikolajek</p>
+      <p>
+        © <a href="#" class="link-style">Mentions légales</a> - Alek Mikolajek
+      </p>
       <div class="social-link">
         <a href="https://www.linkedin.com/in/alekmikolajek/" target="_blank"
           ><i class="fa-brands fa-linkedin fa-2xl"></i
