--- a/presentation.html
+++ b/presentation.html
@@ -21,8 +21,8 @@
         ><img src="./assets/img/logo-alek-portfoliO-big-rbg.png" alt="logo"
       /></a>
       <nav class="navbarLink">
-        <a href="./presentation.html" class="active-link">Qui suis-je ?</a>
-        <a href="#">Mes projets</a>
+        <a href="./presentation.html">Qui suis-je ?</a>
+        <a href="./projet.html">Mes projets</a>
       </nav>
     </header>
     <section class="personal-presentation">
@@ -56,29 +56,17 @@
         <h2>Mes expériences</h2>
         <h3>Développeur Web - Book Your Media 📙</h3>
         <i>Décembre 2023</i>
-        <!-- <p>
-          Réalisation d'une application web mettant en relation une médiathèque
-          et ses consommateurs. L'utilisateur peut se connecter/s'inscrire et
-          réserver des oeuvres.
-        </p> -->
         <h3>Développeur Web - Checklist Jeux Vidéos 🎮</h3>
         <i>Novembre 2023</i>
-        <!-- <p>Réalisation en groupe d'un site web sur le thème des jeux-vidéos.</p> -->
-        <h3>Développeur Web - VOITURAGE 🚗</h3>
-        <i>Février 2022</i>
-        <!-- <p>
-          Réalisation en groupe d'une application web de covoiturage.
-          L'utilisateur peut se connecter et s'inscrire. Il peut également
-          attribuer des notes à des personnes. Le langage C# a été utilisé ainsi
-          que le framework ASP.NET. La partie base de donnée à été écrite avec
-          Microsoft SQL Server.
-        </p> -->
-        <h3>Apprenti Assistant administratif pilotage IT - DIRECT ASSURANCE</h3>
+        <h3>
+          Apprenti Assistant administratif pilotage IT - DIRECT ASSURANCE ♦️
+        </h3>
         <i>Janvier 2021 - Septembre 2021</i>
-        <h3>Apprenti Chargé Back-Office - LE GROUPE LA POSTE</h3>
+        <h3>Apprenti Chargé Back-Office - LA POSTE SOLUTIONS BUSINESS 📬</h3>
         <i>Décembre 2019 - Août 2020</i>
         <h3>
-          Apprenti Assistant de Gestionnaire en Facturation - LE GROUPE LA POSTE
+          Apprenti Assistant de Gestionnaire en Facturation - LA POSTE SOLUTIONS
+          BUSINESS 📬
         </h3>
         <i>Novembre 2018 - Novembre 2019</i>
       </div>
@@ -95,7 +83,9 @@
       </div>
     </section>
     <footer class="footer">
-      <p>© Mentions légales - Alek Mikolajek</p>
+      <p>
+        © <a href="#" class="link-style">Mentions légales</a> - Alek Mikolajek
+      </p>
       <div class="social-link">
         <a href="https://www.linkedin.com/in/alekmikolajek/" target="_blank"
           ><i class="fa-brands fa-linkedin fa-2xl"></i
