--- a/projet.html
+++ b/projet.html
@@ -32,24 +32,35 @@
           alt="image du site"
         />
         <h3>Jeux-Vidéos Checklist 🕹️</h3>
-        <p>Réalisation en groupe d'un site web sur le thème des jeux-vidéos.</p>
+        <div class="height-paragraphe">
+          <p>
+            Réalisation en groupe d'un site web sur le thème des jeux-vidéos.
+          </p>
+        </div>
         <p>Outils utilisés</p>
         <ul>
-          <li>HTML</li>
-          <li>CSS</li>
+          <li><img src="./assets/img/html-logo.png" alt="HTML" /></li>
+          <li><img src="./assets/img/CSS3_logo.png" alt="CSS" /></li>
         </ul>
-        <a href="#"><button class="button-style">Git Hub Repository</button></a>
+        <a
+          href="https://github.com/alekmik/jeux-video-checklist"
+          target="_blank"
+        >
+          <button class="button-style">Git Hub Repository</button>
+        </a>
       </div>
       <div class="card-content">
         <img src="./assets/img/book-your-media-form.png" alt="image du site" />
         <h3>Book Your Medias 📙</h3>
-        <p>
-          Réalisation d'une application web mettant en relation une médiathèque
-          et ses consommateurs. L'utilisateur peut se connecter/s'inscrire et
-          réserver des oeuvres. Un espace back-end est disponible pour les
-          employés, permettant ainsi la gestion des délivrances des livres,
-          films, albums.
-        </p>
+        <div class="height-paragraphe">
+          <p>
+            Réalisation d'une application web mettant en relation une
+            médiathèque et ses consommateurs. L'utilisateur peut se
+            connecter/s'inscrire et réserver des oeuvres. Un espace back-end est
+            disponible pour les employés, permettant ainsi la gestion des
+            délivrances des livres, films, albums.
+          </p>
+        </div>
         <p>Outils utilisés</p>
         <ul>
           <li><img src="./assets/img/PHP-logo.svg.png" alt="PHP" /></li>
