--- a/presentation.html
+++ b/presentation.html
@@ -79,7 +79,9 @@
         </ul>
       </div>
       <div class="button-mesprojets">
-        <a href="#"><button class="button-style">Mes projets</button></a>
+        <a href="./projet.html"
+          ><button class="button-style">Mes projets</button></a
+        >
       </div>
     </section>
     <footer class="footer">
