adding an animated profil picture

--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
       </nav>
     </header>
     <section class="welcome">
-      <div class="photo-profil">
-        <img
-          src="./assets/img/coding-person.webp"
-          alt="photo coding person"
-          class="coding-person"
-        />
+      <div class="wrapper"></div>
+        <div class="photo-profil">
+          <!-- <img
+            src="./assets/img/coding-person.webp"
+            alt="photo coding person"
+            class="coding-person"
+          /> -->
+        </div>
       </div>
       <div class="message-bienvenue">
         <h1>🤝 Bonjour, je suis Alek Mikolajek</h1>
