adding old button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       src="https://kit.fontawesome.com/4fa5450d7b.js"
       crossorigin="anonymous"
     ></script>
+    <script>
+    </script>
     <title>Accueil - Alek Mikolajek</title>
   </head>
   <body>
@@ -28,20 +30,15 @@
     <section class="welcome">
       <div class="wrapper"></div>
         <div class="photo-profil">
-          <!-- <img
-            src="./assets/img/coding-person.webp"
-            alt="photo coding person"
-            class="coding-person"
-          /> -->
         </div>
       </div>
       <div class="message-bienvenue">
-        <h1>🤝 Bonjour, je suis Alek Mikolajek</h1>
+        <h1>🤝 Bonjour, je suis <span class="my-name">Alek Mikolajek</span></h1>
         <h2>💻 Développeur web junior</h2>
         <h2>📍 France, Région parisienne</h2>
-        <a href="./presentation.html"
-          ><button class="button-style">Qui suis-je ?</button></a
-        >
+        <a href="./presentation.html">
+          <button class="button-style">Qui suis-je ?</button>
+        </a>
       </div>
     </section>
     <footer class="footer">
