cancel of the form for the moment

--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,11 @@
       src="https://kit.fontawesome.com/4fa5450d7b.js"
       crossorigin="anonymous"
     ></script>
-    <script>
-    </script>
-    <title>Accueil - Alek Mikolajek</title>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+    ></script>
+    <title>Contact - Alek Mikolajek</title>
   </head>
   <body>
     <header class="header">
@@ -28,20 +30,16 @@
         <a href="./contact.html">Contact</a>
       </nav>
     </header>
-    <section class="welcome">
-      <div class="wrapper"></div>
-        <div class="photo-profil">
-        </div>
+    <!-- <section class="email-link">
+      <div>
+        <h2>Email :</h2>
+        <h2>
+          <a href="mailto:abc@example.com?subject = Feedback&body = Message">
+            Send Feedback
+          </a>
+        </h2>
       </div>
-      <div class="message-bienvenue">
-        <h1>🤝 Bonjour, je suis <span class="my-name">Alek Mikolajek</span></h1>
-        <h2>💻 Développeur web junior</h2>
-        <h2>📍 France, Région parisienne</h2>
-        <a href="./presentation.html">
-          <button class="button-style">Qui suis-je ?</button>
-        </a>
-      </div>
-    </section>
+    </section> -->
     <footer class="footer">
       <p>
         © <a href="#" class="link-style">Mentions légales</a> - Alek Mikolajek
