--- a/presentation.html
+++ b/presentation.html
@@ -23,6 +23,7 @@
       <nav class="navbarLink">
         <a href="./presentation.html">Qui suis-je ?</a>
         <a href="./projet.html">Mes projets</a>
+        <a href="./formulaire-contact.html">Contact</a>
       </nav>
     </header>
     <section class="personal-presentation">
