--- a/projet.html
+++ b/projet.html
@@ -13,19 +13,21 @@
       src="https://kit.fontawesome.com/4fa5450d7b.js"
       crossorigin="anonymous"
     ></script>
+    <script defer src="./script.js"></script>
     <title>Mes projets - Alek Mikolajek</title>
   </head>
   <body>
     <header class="header">
-      <a href="./index.html" class="logo"
+      <a href="/index.html" class="logo"
         ><img src="./assets/img/logo-alek-portfoliO-big-rbg.png" alt="logo"
       /></a>
       <nav class="navbarLink">
-        <a href="./presentation.html">Qui suis-je ?</a>
-        <a href="./projet.html">Mes projets</a>
-        <a href="./contact.html">Contact</a>
+        <a href="/presentation.html" class="style-nav-links">Qui suis-je ?</a>
+        <a href="/projet.html" class="style-nav-links">Mes projets</a>
+        <!-- <a href="./contact.html">Contact</a> -->
       </nav>
     </header>
+    <h2>Mes projets</h2>
     <section class="project">
       <div class="card-content">
         <img
