--- a/projet.html
+++ b/projet.html
@@ -27,7 +27,7 @@
         <!-- <a href="./contact.html">Contact</a> -->
       </nav>
     </header>
-    <h2>Mes projets</h2>
+    <h2 class="title-project">Mes projets</h2>
     <section class="project">
       <div class="card-content">
         <img
