adding new page contact, more css

--- a/contact.html
+++ b/contact.html
@@ -13,43 +13,49 @@
       src="https://kit.fontawesome.com/4fa5450d7b.js"
       crossorigin="anonymous"
     ></script>
-    <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
-    ></script>
+    <script defer src="./script.js"></script>
     <title>Contact - Alek Mikolajek</title>
   </head>
   <body>
     <header class="header">
-      <a href="./index.html" class="logo"
+      <a href="/index.html" class="logo"
         ><img src="./assets/img/logo-alek-portfoliO-big-rbg.png" alt="logo"
       /></a>
       <nav class="navbarLink">
-        <a href="./presentation.html">Qui suis-je ?</a>
-        <a href="./projet.html">Mes projets</a>
-        <a href="./contact.html">Contact</a>
+        <a href="/presentation.html" class="style-nav-links">Qui suis-je ?</a>
+        <a href="/projet.html" class="style-nav-links">Mes projets</a>
+        <a href="/contact.html" class="style-nav-links">Contact</a>
       </nav>
     </header>
-    <!-- <section class="email-link">
-      <div>
-        <h2>Email :</h2>
-        <h2>
-          <a href="mailto:abc@example.com?subject = Feedback&body = Message">
-            Send Feedback
-          </a>
-        </h2>
+    <section class="email-link">
+      <div class="email-display">
+        <h2>⭐️ Contactez moi :</h2>
+        <p>
+          J'aimerais que vous me contactiez si vous avez des questions, si vous
+          cherchez à vous constituer un réseau ou si vous souhaitez discuter de
+          projets dans lesquels je peux vous aider.
+        </p>
+        <a href="mailto:alekmikopro@gmail.com?subject = Feedback&body = Message"
+          ><button class="button-contact-me">Me contacter</button></a
+        >
       </div>
-    </section> -->
+    </section>
     <footer class="footer">
       <p>
         © <a href="#" class="link-style">Mentions légales</a> - Alek Mikolajek
       </p>
       <div class="social-link">
         <a href="https://www.linkedin.com/in/alekmikolajek/" target="_blank"
-          ><i class="fa-brands fa-linkedin fa-2xl"></i
+          ><i
+            class="fa-brands fa-linkedin fa-2xl fa-bounce"
+            style="--fa-animation-iteration-count: 2"
+          ></i
         ></a>
         <a href="https://github.com/alekmik" target="_blank"
-          ><i class="fa-brands fa-github fa-2xl"></i
+          ><i
+            class="fa-brands fa-github fa-2xl fa-bounce"
+            style="--fa-animation-iteration-count: 2"
+          ></i
         ></a>
       </div>
     </footer>
