--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   </head>
   <body>
     <header class="header">
-      <a href="./index.html" class="logo"
+      <a href="/index.html" class="logo"
         ><img src="./assets/img/logo-alek-portfoliO-big-rbg.png" alt="logo"
       /></a>
       <nav class="navbarLink">
         <a href="/presentation.html" class="style-nav-links">Qui suis-je ?</a>
         <a href="/projet.html" class="style-nav-links">Mes projets</a>
-        <!-- <a href="./contact.html">Contact</a> -->
+        <a href="/contact.html" class="style-nav-links">Contact</a>
       </nav>
     </header>
     <section class="welcome">
