--- a/presentation.html
+++ b/presentation.html
@@ -24,12 +24,12 @@
       <nav class="navbarLink">
         <a href="/presentation.html" class="style-nav-links">Qui suis-je ?</a>
         <a href="/projet.html" class="style-nav-links">Mes projets</a>
-        <!-- <a href="./formulaire-contact.html">Contact</a> -->
+        <a href="/contact.html" class="style-nav-links">Contact</a>
       </nav>
     </header>
     <section class="personal-presentation">
       <div class="infos card-style">
-        <h2>Résumé</h2>
+        <h2>👤 Résumé</h2>
         <p>
           💻 Développeur web PHP en formation à la Wild Code School. Je suis
           disponible pour une nouvelle aventure à partir de mi-janvier 2024. 📆
@@ -43,7 +43,7 @@
         </p>
       </div>
       <div class="competences card-style">
-        <h2>Mes compétences</h2>
+        <h2>🪡 Mes compétences</h2>
         <ul>
           <li>
             <h3><img src="./assets/img/PHP-logo.svg.png" alt="PHP" /></h3>
@@ -61,7 +61,7 @@
         </ul>
       </div>
       <div class="exp card-style">
-        <h2>Mes expériences</h2>
+        <h2>📱 Mes expériences</h2>
         <fieldset>
           <legend>Développement web</legend>
           <h3>Développeur Web - Book Your Media 📙</h3>
@@ -100,7 +100,7 @@
         </fieldset>
       </div>
       <div class="hobbies card-style">
-        <h2>Mes hobbies</h2>
+        <h2>🍿 Mes hobbies</h2>
         <ul>
           <li>🎞️ Cinéma</li>
           <li>🏟️ Sport</li>
