--- a/projet.html
+++ b/projet.html
@@ -24,20 +24,23 @@
       <nav class="navbarLink">
         <a href="/presentation.html" class="style-nav-links">Qui suis-je ?</a>
         <a href="/projet.html" class="style-nav-links">Mes projets</a>
-        <!-- <a href="./contact.html">Contact</a> -->
+        <a href="/contact.html" class="style-nav-links">Contact</a>
       </nav>
     </header>
-    <h2 class="title-project">Mes projets</h2>
+    <h2 class="title-project">🖥️ Mes projets</h2>
     <section class="project">
       <div class="card-content">
         <img
           src="./assets/img/jeux-videos-checklist-2.png"
           alt="image du site"
         />
-        <h3>Jeux-Vidéos Checklist 🕹️</h3>
+        <h3>Jeux-Vidéos Checklist 🕹️ 🏆 ✅</h3>
         <div class="height-paragraphe">
           <p>
-            Réalisation en groupe d'un site web sur le thème des jeux-vidéos.
+            Réalisation en groupe d'un site web sur le thème des jeux-vidéos. Le
+            site propose des listes de tâches correspondant aux trophées d'un
+            jeu vidéo. Ce support permettra à l'utilisateur de terminer un jeu à
+            100%.
           </p>
         </div>
         <p>Outils utilisés</p>
@@ -54,7 +57,7 @@
       </div>
       <div class="card-content">
         <img src="./assets/img/book-your-media-form.png" alt="image du site" />
-        <h3>Book Your Medias 📙</h3>
+        <h3>Book Your Medias 📙 🎥 📀</h3>
         <div class="height-paragraphe">
           <p>
             Réalisation d'une application web mettant en relation une
@@ -79,10 +82,16 @@
       </p>
       <div class="social-link">
         <a href="https://www.linkedin.com/in/alekmikolajek/" target="_blank"
-          ><i class="fa-brands fa-linkedin fa-2xl"></i
+          ><i
+            class="fa-brands fa-linkedin fa-2xl fa-bounce"
+            style="--fa-animation-iteration-count: 2"
+          ></i
         ></a>
         <a href="https://github.com/alekmik" target="_blank"
-          ><i class="fa-brands fa-github fa-2xl"></i
+          ><i
+            class="fa-brands fa-github fa-2xl fa-bounce"
+            style="--fa-animation-iteration-count: 2"
+          ></i
         ></a>
       </div>
     </footer>
