adding animation background for the contact page

--- a/contact.html
+++ b/contact.html
@@ -27,16 +27,27 @@
         <a href="/contact.html" class="style-nav-links">Contact</a>
       </nav>
     </header>
+    <!-- background animation emoji -->
+    <div class="bg">
+      <ul class="bg-area">
+        <li>📟</li>
+        <li>⚽️</li>
+        <li>⌨️</li>
+        <li>🛸</li>
+        <li>🏆</li>
+        <li>🧃</li>
+        <li>🛰️</li>
+        <li>💾</li>
+        <li>🖍️</li>
+        <li>☕️</li>
+      </ul>
+    </div>
+    <!-- end of the background -->
     <section class="email-link">
       <div class="email-display">
         <h2>⭐️ Contactez moi :</h2>
-        <p>
-          J'aimerais que vous me contactiez si vous avez des questions, si vous
-          cherchez à vous constituer un réseau ou si vous souhaitez discuter de
-          projets dans lesquels je peux vous aider.
-        </p>
         <a href="mailto:alekmikopro@gmail.com?subject = Feedback&body = Message"
-          ><button class="button-contact-me">Me contacter</button></a
+          ><button class="button-contact-me">alekmikopro@gmail.com</button></a
         >
       </div>
     </section>
