--- a/projet.html
+++ b/projet.html
@@ -34,7 +34,7 @@
           src="./assets/img/jeux-videos-checklist-2.png"
           alt="image du site"
         />
-        <h3>Jeux-Vidéos Checklist 🕹️ 🏆 ✅</h3>
+        <h3>Jeux-Vidéos Checklist 🕹️ 🏆</h3>
         <div class="height-paragraphe">
           <p>
             Réalisation en groupe d'un site web sur le thème des jeux-vidéos. Le
@@ -57,7 +57,7 @@
       </div>
       <div class="card-content">
         <img src="./assets/img/book-your-media-form.png" alt="image du site" />
-        <h3>Book Your Medias 📙 🎥 📀</h3>
+        <h3>Book Your Medias 📙 📀</h3>
         <div class="height-paragraphe">
           <p>
             Réalisation d'une application web mettant en relation une
