--- a/presentation.html
+++ b/presentation.html
@@ -26,6 +26,20 @@
         <a href="/projet.html" class="style-nav-links">Mes projets</a>
         <a href="/contact.html" class="style-nav-links">Contact</a>
       </nav>
+      <div class="hamburger-menu">
+        <input id="menu__toggle" type="checkbox" />
+        <label class="menu__btn" for="menu__toggle">
+          <span></span>
+        </label>
+
+        <ul class="menu__box">
+          <li>
+            <a class="menu__item" href="/presentation.html">Qui suis-je ?</a>
+          </li>
+          <li><a class="menu__item" href="/projet.html">Mes projets</a></li>
+          <li><a class="menu__item" href="/contact.html">Contact</a></li>
+        </ul>
+      </div>
     </header>
 
     <section class="personal-presentation">
