--- a/projet.html
+++ b/projet.html
@@ -66,7 +66,7 @@
           href="https://github.com/alekmik/jeux-video-checklist"
           target="_blank"
         >
-          <button class="button-style">Git Hub Repository</button>
+          <button class="button-style">Dépôt Git Hub</button>
         </a>
       </div>
       <div class="card-content">
@@ -87,7 +87,7 @@
           <li><img src="./assets/img/MySQL.png" alt="MySQL" /></li>
           <li><img src="./assets/img/twig-removebg.png" alt="Twig" /></li>
         </ul>
-        <a href="#"><button class="button-style">Git Hub Repository</button></a>
+        <a href="#"><button class="button-style">Dépôt Git Hub</button></a>
       </div>
     </section>
     <footer class="footer">
