add of a new page : mentions legales

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="./script.js"></script>
-    <title>Contact - Alek Mikolajek</title>
+    <title>Mes projets - Alek Mikolajek</title>
   </head>
   <body>
     <header class="header">
@@ -41,28 +41,29 @@
         </ul>
       </div>
     </header>
-    <!-- background animation emoji -->
-    <div class="bg">
-      <ul class="bg-area">
-        <li>📟</li>
-        <li>⚽️</li>
-        <li>⌨️</li>
-        <li>🛸</li>
-        <li>🏆</li>
-        <li>🧃</li>
-        <li>🛰️</li>
-        <li>💾</li>
-        <li>🖍️</li>
-        <li>☕️</li>
-      </ul>
-    </div>
-    <!-- end of the background -->
-    <section class="email-link">
-      <div class="email-display">
-        <h2>⭐️ Contactez moi :</h2>
-        <a href="mailto:alekmikopro@gmail.com?subject = Feedback&body = Message"
-          ><button class="button-contact-me">alekmikopro@gmail.com</button></a
-        >
+    <h2 class="title-project">Mentions légales</h2>
+    <section class="mentions">
+      <div class="editeur">
+        <h3>Editeur</h3>
+        <p>
+          Le site web alek-mikolajek.netlify.app est édité par Alek Mikolajek.
+        </p>
+        <p>Email : alekmikopro@gmail.com</p>
+        <p>Directeur de la publication : Alek Mikolajek</p>
+      </div>
+      <div class="hebergeur">
+        <h3>Hébergeur</h3>
+        <p>NETLIFY INC</p>
+        <p>Adresse : 512 2nd Street, Suite 200 San Francisco, CA 94107</p>
+      </div>
+      <div class="credits">
+        <h3>Crédits</h3>
+        <p>
+          Tous droits de reproduction ou de citation sont réservés à Alek
+          Mikolajek
+        </p>
+        <p>Intégration, développement web : Alek Mikolajek</p>
+        <p>Webdesign : Alek Mikolajek</p>
       </div>
     </section>
     <footer class="footer">
@@ -73,16 +74,10 @@
       </p>
       <div class="social-link">
         <a href="https://www.linkedin.com/in/alekmikolajek/" target="_blank"
-          ><i
-            class="fa-brands fa-linkedin fa-2xl fa-bounce"
-            style="--fa-animation-iteration-count: 2"
-          ></i
+          ><i class="fa-brands fa-linkedin fa-2xl"></i
         ></a>
         <a href="https://github.com/alekmik" target="_blank"
-          ><i
-            class="fa-brands fa-github fa-2xl fa-bounce"
-            style="--fa-animation-iteration-count: 2"
-          ></i
+          ><i class="fa-brands fa-github fa-2xl"></i
         ></a>
       </div>
     </footer>
