--- a/presentation.html
+++ b/presentation.html
@@ -130,7 +130,9 @@
     </section>
     <footer class="footer">
       <p>
-        © <a href="#" class="link-style">Mentions légales</a> - Alek Mikolajek
+        ©
+        <a href="/mentions-legales.html" class="link-style">Mentions légales</a>
+        - Alek Mikolajek
       </p>
       <div class="social-link">
         <a href="https://www.linkedin.com/in/alekmikolajek/" target="_blank"
