add of a new title for the home

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </script>
         <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 
-    <title>Accueil - Alek Mikolajek</title>
+    <title>Alek Mikolajek | Création de Sites Web en France</title>
   </head>
   <body>
     <header class="header">
