button for 2nd repo grey

--- a/projet.html
+++ b/projet.html
@@ -87,7 +87,9 @@
           <li><img src="./assets/img/MySQL.png" alt="MySQL" /></li>
           <li><img src="./assets/img/twig-removebg.png" alt="Twig" /></li>
         </ul>
-        <a href="#"><button class="button-style">Dépôt Git Hub</button></a>
+        <a href="#"
+          ><button class="button-style gris">🚧 En développement...</button></a
+        >
       </div>
     </section>
     <footer class="footer">
