modification of responsive +1080px

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
       src="https://kit.fontawesome.com/4fa5450d7b.js"
       crossorigin="anonymous"
     ></script>
-    <script defer src="./script.js">
-    </script>
-        <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-
+    <script defer src="./assets/script/script.js"></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script defer src="./assets/script/typeWritter.js"></script>
     <title>Alek Mikolajek | Création de Sites Web en France</title>
   </head>
   <body>
