resolve contactez moi

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
     <!-- end of the background -->
     <section class="email-link">
       <div class="email-display">
-        <h2>⭐️ Contactez moi :</h2>
+        <h2>⭐️ Contactez-moi :</h2>
         <a href="mailto:alekmikopro@gmail.com?subject = Feedback&body = Message"
           ><button class="button-contact-me">alekmikopro@gmail.com</button></a
         >
