add of more space for the footer for contact page

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
         >
       </div>
     </section>
-    <footer class="footer">
+    <footer class="footer contact-foo">
       <p>
         ©
         <a href="/mentions-legales.html" class="link-style">Mentions légales</a>
