--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
       src="https://kit.fontawesome.com/4fa5450d7b.js"
       crossorigin="anonymous"
     ></script>
-    <script defer src="./script.js"></script>
+    <script defer src="./assets/script/script.js"></script>
     <title>Contact - Alek Mikolajek</title>
   </head>
   <body>
