adding meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Je suis développeur de sites web en France.">
     <link
       rel="icon"
       type="image/png"
@@ -16,7 +17,7 @@
     <script defer src="./assets/script/script.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script defer src="./assets/script/typeWritter.js"></script>
-    <title>Alek Mikolajek | Création de Sites Web en France</title>
+    <title>Alek Mikolajek | Développeur de Sites Web en France</title>
   </head>
   <body>
     <header class="header">
