--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Veuillez cliquer sur le bouton pour me contacter."
+    />
     <link
       rel="icon"
       type="image/png"
