adding meta author

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
       name="description"
       content="Veuillez cliquer sur le bouton pour me contacter."
     />
+    <meta name="author" content="Alek Mikolajek" />
     <link
       rel="icon"
       type="image/png"
