--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Je suis développeur de sites web en France.">
+    <meta name="author" content="Alek Mikolajek">
     <link
       rel="icon"
       type="image/png"
