--- a/projet.html
+++ b/projet.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Découvrez mes projets." />
+    <meta name="author" content="Alek Mikolajek" />
     <link
       rel="icon"
       type="image/png"
