--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
       src="https://kit.fontawesome.com/4fa5450d7b.js"
       crossorigin="anonymous"
     ></script>
+    <script>
+      window.axeptioSettings = {
+        clientId: "659fa74b19275e7d53058ff3",
+      };
+       
+      (function(d, s) {
+        var t = d.getElementsByTagName(s)[0], e = d.createElement(s);
+        e.async = true; e.src = "//static.axept.io/sdk.js";
+        t.parentNode.insertBefore(e, t);
+      })(document, "script");
+    </script>
     <script defer src="./assets/script/script.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script defer src="./assets/script/typeWritter.js"></script>
