--- a/projet.html
+++ b/projet.html
@@ -89,9 +89,12 @@
           <li><img src="./assets/img/MySQL.png" alt="MySQL" /></li>
           <li><img src="./assets/img/twig-removebg.png" alt="Twig" /></li>
         </ul>
-        <a href="#"
-          ><button class="button-style gris">🚧 En développement...</button></a
+        <a
+          href="https://github.com/alekmik/2024-BookYourMedias-php"
+          target="_blank"
         >
+          <button class="button-style">Dépôt Git Hub</button>
+        </a>
       </div>
     </section>
     <footer class="footer">
