adding link of my project in the presentation page

--- a/presentation.html
+++ b/presentation.html
@@ -81,9 +81,21 @@
         <h2>📱 Mes expériences</h2>
         <fieldset>
           <legend>Développement web</legend>
-          <h3>Développeur Web - Book Your Media 📙</h3>
+          <h3>
+            <a
+              href="https://github.com/alekmik/2024-BookYourMedias-php"
+              target="_blank"
+              >Développeur Web - Book Your Media 📙</a
+            >
+          </h3>
           <i>Décembre 2023</i>
-          <h3>Développeur Web - Checklist Jeux Vidéos 🎮</h3>
+          <h3>
+            <a
+              href="https://github.com/alekmik/jeux-video-checklist"
+              target="_blank"
+              >Développeur Web - Checklist Jeux Vidéos 🎮</a
+            >
+          </h3>
           <i>Novembre 2023</i>
         </fieldset>
         <fieldset>
