--- a/projet.html
+++ b/projet.html
@@ -72,14 +72,17 @@
         </a>
       </div>
       <div class="card-content">
-        <img src="./assets/img/book-your-media-page-presentation-tintin.png" alt="image du site" />
+        <img
+          src="./assets/img/book-your-media-page-presentation-tintin.png"
+          alt="image du site"
+        />
         <h3>Book Your Medias 📙 📀</h3>
         <div class="height-paragraphe">
           <p>
             Réalisation d'une application web mettant en relation une
             médiathèque et ses consommateurs. L'utilisateur peut se
-            connecter/s'inscrire et réserver des oeuvres. Un espace back-end est
-            disponible pour les employés, permettant ainsi la gestion des
+            connecter/s'inscrire et réserver des oeuvres. Un espace back-office
+            est disponible pour les employés, permettant ainsi la gestion des
             délivrances des livres, films, albums.
           </p>
         </div>
