add of rel:canonical, to prevent ducpilicates and tell Google which page is the original version

--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
       href="./assets/img/favicon-am-removebg.png"
     />
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="canonical" href="https://alek-mikolajek.netlify.app/contact" />
     <script
       src="https://kit.fontawesome.com/4fa5450d7b.js"
       crossorigin="anonymous"
