--- a/presentation.html
+++ b/presentation.html
@@ -11,6 +11,10 @@
       href="./assets/img/favicon-am-removebg.png"
     />
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link
+      rel="canonical"
+      href="https://alek-mikolajek.netlify.app/presentation"
+    />
     <script
       src="https://kit.fontawesome.com/4fa5450d7b.js"
       crossorigin="anonymous"
