--- a/projet.html
+++ b/projet.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Découvrez mes projets." />
     <meta name="author" content="Alek Mikolajek" />
+    <meta name="google-site-verification" content="eoD5MpDI2csqRYG4p75Jfpnr57_2Ur5eMNWv6jt63UM" />
     <link
       rel="icon"
       type="image/png"
