--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Je suis développeur de sites web en France.">
     <meta name="author" content="Alek Mikolajek">
     <meta name="google-site-verification" content="eoD5MpDI2csqRYG4p75Jfpnr57_2Ur5eMNWv6jt63UM" />
+    <meta name="googlebot-news" content="all">
     <link
       rel="icon"
       type="image/png"
