add meta index on every pages

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Mentions légales du site." />
     <meta name="author" content="Alek Mikolajek" />
+    <meta name="robots" content="index"/>
     <link
       rel="icon"
       type="image/png"
