--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
       content="Veuillez cliquer sur le bouton pour me contacter."
     />
     <meta name="author" content="Alek Mikolajek" />
+    <meta name="robots" content="index"/>
     <link
       rel="icon"
       type="image/png"
