--- a/presentation.html
+++ b/presentation.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Découvrez qui je suis." />
     <meta name="author" content="Alek Mikolajek" />
+    <meta name="robots" content="index"/>
+
     <link
       rel="icon"
       type="image/png"
