--- a/projet.html
+++ b/projet.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Découvrez mes projets." />
     <meta name="author" content="Alek Mikolajek" />
+    <meta name="robots" content="index"/>
     <link
       rel="icon"
       type="image/png"
