add of meta theme color

--- a/projet.html
+++ b/projet.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Découvrez mes projets." />
     <meta name="author" content="Alek Mikolajek" />
     <meta name="robots" content="index"/>
+    <meta name="theme-color" content="#05216b" />
     <link
       rel="icon"
       type="image/png"
