--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     />
     <meta name="author" content="Alek Mikolajek" />
     <meta name="robots" content="index"/>
+    <meta name="theme-color" content="#05216b" />
     <link
       rel="icon"
       type="image/png"
