--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Alek Mikolajek">
     <meta name="google-site-verification" content="eoD5MpDI2csqRYG4p75Jfpnr57_2Ur5eMNWv6jt63UM" />
     <meta name="robots" content="index"/>
+    <meta name="theme-color" content="#05216b" />
     <link
       rel="icon"
       type="image/png"
