--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Mentions légales du site." />
     <meta name="author" content="Alek Mikolajek" />
     <meta name="robots" content="index"/>
+    <meta name="theme-color" content="#05216b" />
     <link
       rel="icon"
       type="image/png"
