--- a/presentation.html
+++ b/presentation.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Découvrez qui je suis." />
     <meta name="author" content="Alek Mikolajek" />
     <meta name="robots" content="index"/>
-
+    <meta name="theme-color" content="#05216b" />
     <link
       rel="icon"
       type="image/png"
