--- a/presentation.html
+++ b/presentation.html
@@ -80,7 +80,7 @@
             <h3><img src="./assets/img/CSS3_logo.png" alt="CSS" /></h3>
           </li>
           <li><img src="./assets/img/MySQL.png" alt="MySQL" /></li>
-          <li><img src="./assets/img/Git-logo.png" alt="Git" /></li>
+          <li><img src="./assets/img/Git-Logo-White.png" alt="Git" /></li>
         </ul>
       </div>
       <div class="exp card-style">
