--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-N7D522WC");
+    </script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -8,7 +22,7 @@
       content="Veuillez cliquer sur le bouton pour me contacter."
     />
     <meta name="author" content="Alek Mikolajek" />
-    <meta name="robots" content="index"/>
+    <meta name="robots" content="index" />
     <meta name="theme-color" content="#05216b" />
     <link
       rel="icon"
@@ -25,6 +39,16 @@
     <title>Contact - Alek Mikolajek</title>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-N7D522WC"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header class="header">
       <a href="/index.html" class="logo"
         ><img src="./assets/img/logo-alek-portfoliO-big-rbg.png" alt="logo"
