🎨 remove emojis, update of margin-top

--- a/presentation.html
+++ b/presentation.html
@@ -76,21 +76,21 @@
 
     <section class="personal-presentation">
       <div class="infos card-style">
-        <h2>👤 Résumé</h2>
+        <h2>Résumé</h2>
         <p>
-          💻 Développeur web PHP en formation à la Wild Code School. Je suis
-          disponible pour une nouvelle aventure à partir de mi-janvier 2024. 📆
+          Développeur web PHP en formation à la Wild Code School. Je suis
+          disponible pour une nouvelle aventure à partir de mi-janvier 2024.
         </p>
 
         <p>
-          ⛳ Animé par l'envie d'apporter des solutions techniques aux besoins
-          des utilisateurs, je suis vivement intéressé par l'intégration d'une
+          Animé par l'envie d'apporter des solutions techniques aux besoins des
+          utilisateurs, je suis vivement intéressé par l'intégration d'une
           entreprise qui valorise une approche collaborative et qui encourage
-          l'échange de connaissances au-delà de la programmation. 🚀
+          l'échange de connaissances au-delà de la programmation.
         </p>
       </div>
       <div class="competences card-style">
-        <h2>🪡 Mes compétences</h2>
+        <h2>Mes compétences</h2>
         <ul>
           <li>
             <h3><img src="./assets/img/PHP-logo.svg.png" alt="PHP" /></h3>
@@ -108,7 +108,7 @@
         </ul>
       </div>
       <div class="exp card-style">
-        <h2>📱 Mes expériences</h2>
+        <h2>Mes expériences</h2>
         <fieldset>
           <legend>Développement web</legend>
           <h3>
@@ -137,7 +137,6 @@
             <a href="https://www.direct-assurance.fr/" target="_blank"
               >DIRECT ASSURANCE</a
             >
-            ♦️
           </h3>
           <i>Janvier 2021 - Septembre 2021</i>
           <h3>
@@ -145,7 +144,6 @@
             <a href="https://www.laposte.fr/entreprise" target="_blank"
               >LA POSTE SOLUTIONS BUSINESS</a
             >
-            📬
           </h3>
           <i>Décembre 2019 - Août 2020</i>
           <h3>
@@ -153,7 +151,6 @@
             <a href="https://www.laposte.fr/entreprise" target="_blank"
               >LA POSTE SOLUTIONS BUSINESS</a
             >
-            📬
           </h3>
           <i>Novembre 2018 - Novembre 2019</i>
         </fieldset>
