paragraphe de présentation

--- a/presentation.html
+++ b/presentation.html
@@ -79,14 +79,8 @@
         <h2>Résumé</h2>
         <p>
           Développeur web PHP en formation à la Wild Code School. Je suis
-          disponible pour une nouvelle aventure à partir de mi-janvier 2024.
-        </p>
-
-        <p>
-          Animé par l'envie d'apporter des solutions techniques aux besoins des
-          utilisateurs, je suis vivement intéressé par l'intégration d'une
-          entreprise qui valorise une approche collaborative et qui encourage
-          l'échange de connaissances au-delà de la programmation.
+          disponible pour une nouvelle aventure à partir de
+          <strong>septembre 2024</strong>.
         </p>
       </div>
       <div class="competences card-style">
